samples/_failures_safe/1761484295_5cddbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5035c2f4.c: In function ‘main’:
./samples/SAFE/__tmp_5035c2f4.c:157:5: error: expected expression at end of input
  157 |     graph_add_edge(&g, 0,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_5035c2f4.c:157:5: error: too few arguments to function ‘graph_add_edge’
./samples/SAFE/__tmp_5035c2f4.c:48:5: note: declared here
   48 | int graph_add_edge(struct Graph *g, int from, int to, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_5035c2f4.c:157:5: error: expected declaration or statement at end of input
  157 |     graph_add_edge(&g, 0,
      |     ^~~~~~~~~~~~~~
